--- a/vscode/txt_in_nouns.ipynb
+++ b/vscode/txt_in_nouns.ipynb
@@ -2,10 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4213ee4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "\t\t  명사 추출 프로그램을 시작합니다.\n",
+      "============================================================\n",
+      "txt 파일을 저장합니다. 저장 경로를 지정해주세요.\n",
+      "예) D:\\2th_project\\W_test_country\\ \n",
+      "저장 파일 경로: D:\\2th_project\\W_test_country\\ \n",
+      "============================================================\n",
+      "txt 파일의 이름을 지정해주세요.\n",
+      "예) test\n",
+      "txt 파일명 지정: test\n",
+      "============================================================\n",
+      "txt 파일을 아래와 같이 저장합니다.\n",
+      "경로: D:\\2th_project\\W_test_country\\ \n",
+      "이름: test\n",
+      "============================================================\n",
+      "명사를 추출할 데이터 파일의 경로를 입력해주세요.\n",
+      "예) D:\\2th_project\\country\\F_Russia.txt \n",
+      "데이터 파일 경로: D:\\2th_project\\country\\F_Russia.txt \n",
+      "============================================================\n",
+      "명사 추출이 완료되었으며 파일이 정상적으로 저장되었습니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 기존 txt 파일에서 명사만 추출\n",
     "\n",
@@ -19,7 +46,7 @@
     "        print('='*60)\n",
     "        \n",
     "    def file_dir(self): # 명사 추출 이후에 txt 파일을 저장시킬 경로를 지정받는 함수 \n",
-    "        print('txt 파일을 저장합니다. 저장 경로를 지정해주세요.\\n예) /Users/deankim/Desktop/Developer/Project/ ')\n",
+    "        print('txt 파일을 저장합니다. 저장 경로를 지정해주세요.\\n예) D:\\\\2th_project\\\\W_test_country\\\\ ')\n",
     "        self.file_directory = input('저장 파일 경로: ') # 파일 경로는 file_directory 변수에 담습니다.\n",
     "        print('='*60)\n",
     "        return self.file_directory\n",
@@ -38,7 +65,7 @@
     "        return self.txt_file                                    # 파일 경로와 파일명 그리고 확장명이 더해진것을 txt_file 변수에 담습니다.\n",
     "    \n",
     "    def open_raw_data(self): # 명사만 추출할 txt 파일을 불러오는 함수 \n",
-    "        print('명사를 추출할 데이터 파일의 경로를 입력해주세요.\\n예)/Users/deankim/Desktop/Developer/Project/clean_text/F_Korea.txt')\n",
+    "        print('명사를 추출할 데이터 파일의 경로를 입력해주세요.\\n예) D:\\\\2th_project\\\\country\\\\F_Russia.txt ')\n",
     "        self.raw_data = input('데이터 파일 경로: ') # txt 파일의 경로를 raw_data 변수에 담습니다. \n",
     "        print('='*60)\n",
     "        return self.raw_data \n",
@@ -74,6 +101,14 @@
     "    \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88ee1a33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
